# aquacppminer-gpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
docker/: Dockerfile.ubuntu  README.md
src/: _kernel.h  args.cpp  args.h  config.cpp  config.h  formatDuration.cpp  getPwd.cpp  hardware_utils.cpp  hardware_utils.h  hex_encode_utils.cpp  hex_encode_utils.h  http.cpp  http.h  input.cl  inputParser.h  kbhit.cpp  kbhit.h  log.cpp  log.h  main.cpp  miner.cpp  miner.h  miningConfig.cpp  miningConfig.h  string_utils.cpp  tests.cpp  timer.cpp  timer.h  updateThread.cpp  updateThread.h
src/windows/: procinfo_windows.cpp  procinfo_windows.h  win_tools.cpp  win_tools.h
